--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -169,37 +169,20 @@
             <ul>
                 <a class="text-sm font-light" href="/hosting-cloud/">Hosting Cloud</a>
             </ul>
-            <ul>
-                <a class="text-sm font-light" href="/hosting-reseller/">Hosting Reseller</a>
-            </ul>
-        </li>
-
-        <li>
-            <p class="font-bold">VPS Hosting</p>
-            <ul>
-                <a class="text-sm font-light" href="#">VPS Hosting Plesk</a>
-            </ul>
-            <ul>
-                <a class="text-sm font-light" href="#">VPS Hosting CyberPanel</a>
-            </ul>
-
         </li>
 
         <li>
             <p class="font-bold">Dominios</p>
             <ul>
-                <a class="text-sm font-light" href="https://clientes.servistream.net/cart.php?a=add&domain=register">Registrar</a>
+                <a class="text-sm font-light" href="https://panel.servistream.net/order/shop?catid=1280d163-9e23-7d43-e78b-64610589e572">Registrar</a>
             </ul>
             <ul>
-                <a class="text-sm font-light" href="https://clientes.servistream.net/cart.php?a=add&domain=register">Revisar Existencia</a>
+                <a class="text-sm font-light" href="https://panel.servistream.net/order/shop?catid=1280d163-9e23-7d43-e78b-64610589e572">Revisar Existencia</a>
             </ul>
         </li>
 
         <li>
             <p class="font-bold">Radio Streaming</p>
-            <ul>
-                <a class="text-sm font-light" href="/centovacast/">CentovaCast</a>
-            </ul>
             <ul>
                 <a class="text-sm font-light" href="/sonicpanel/">SonicPanel</a>
             </ul>
@@ -218,7 +201,7 @@
         <li>
             <p class="font-bold">Reseller Radio</p>
             <ul>
-                <a class="text-sm font-light" href="/reseller-radio/">CentovaCast</a>
+                <a class="text-sm font-light" href="https://walink.co/4f797c">SonicPanel</a>
             </ul>
         </li>
 
@@ -238,7 +221,7 @@
                 <a class="text-sm font-light" href="https://walink.co/4f797c" target="_blank">WhatsApp</a>
             </ul>
             <ul>
-                <a class="text-sm font-light" href="https://clientes.servistream.net/submitticket.php">Crear un Ticket</a>
+                <a class="text-sm font-light" href="https://panel.servistream.net/">Crear un Ticket</a>
             </ul>
         </li>
     </div>
@@ -247,14 +230,13 @@
 
         <div class="contenedor mx-auto flex text-center flex-col justify-between items-center lg:flex-row">
             <div>
-                <a class="text-sm font-light" href="https://blog.servistream.net">Blog</a>
                 <a class="text-sm font-light" href="https://www.youtube.com/results?search_query=centovacast" target="_blank">Tutoriales</a>
                 <a class="text-sm font-light" href="/preguntas-frecuentes">Preguntas Frecuentes</a>
                 <a class="text-sm font-light" href="/terminos">Términos y Condiciones</a>
             </div>
 
             <div>
-                <p class="text-sm font-light mt-5 lg:mt-0">© 2014 – 2024. Todos los derechos reservados.</p>
+                <p class="text-sm font-light mt-5 lg:mt-0">© 2014 – 2025. Todos los derechos reservados.</p>
             </div>
 
 
