--- a/src/components/MenuBlack.astro
+++ b/src/components/MenuBlack.astro
@@ -23,7 +23,7 @@
                   <p
                     class="uppercase tracking-wider text-gray-500 font-medium text-[13px]"
                   >
-                    Hosting Poderoso
+                    Hosting Compartido
                   </p>
                   <ul class="mt-3 text-[15px]">
                     <li>
@@ -38,6 +38,16 @@
                         </p>
                       </a>
                     </li>
+
+                  </ul>
+                </div>
+                <div>
+                  <p
+                    class="uppercase tracking-wider text-gray-500 font-medium text-[13px]"
+                  >
+                    Hosting Potente
+                  </p>
+                  <ul class="mt-3 text-[15px]">
                     <li>
                       <a
                         href="/hosting-cloud/"
@@ -50,110 +60,9 @@
                         </p>
                       </a>
                     </li>
-                    <li>
-                      <a
-                        href="/hosting-reseller/"
-                        class="block p-2 -mx-2 rounded-lg hover:bg-gradient-to-br hover:from-indigo-50 hover:to-pink-50 hover:via-blue-50 transition ease-in-out duration-300 text-gray-800 font-semibold hover:text-indigo-600"
-                      >
-                        Hosting Reseller
-                        <p class="text-gray-500 font-normal">
-                          Administre múltiples cuentas de cPanel para sus propios clientes
-                        </p>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-                <div>
-                  <p
-                    class="uppercase tracking-wider text-gray-500 font-medium text-[13px]"
-                  >
-                    PLUGIN RECOMENDADOS
-                  </p>
-                  <ul class="mt-3 text-[15px]">
-                    <li>
-                      <a
-                        href="https://elementor.com/" target="_blank"
-                        class="block p-2 -mx-2 rounded-lg hover:bg-gradient-to-br hover:from-indigo-50 hover:to-pink-50 hover:via-blue-50 transition ease-in-out duration-300 text-gray-800 font-semibold hover:text-indigo-600"
-                      >
-                        Elementor Pro
-                        <p class="text-gray-500 font-normal">
-                          Crea sitios web a velocidades récord
-                        </p>
-                      </a>
-                    </li>
-                    <li>
-                      <a
-                        href="https://www.elegantthemes.com/gallery/divi/" target="_blank"
-                        class="block p-2 -mx-2 rounded-lg hover:bg-gradient-to-br hover:from-indigo-50 hover:to-pink-50 hover:via-blue-50 transition ease-in-out duration-300 text-gray-800 font-semibold hover:text-indigo-600"
-                      >
-                      Divi Builder
-                        <p class="text-gray-500 font-normal">
-                          Con su sistema de arrastrar y soltar
-                        </p>
-                      </a>
-                    </li>
-                    <li>
-                      <a
-                        href="https://wpbakery.com/" target="_blank"
-                        class="block p-2 -mx-2 rounded-lg hover:bg-gradient-to-br hover:from-indigo-50 hover:to-pink-50 hover:via-blue-50 transition ease-in-out duration-300 text-gray-800 font-semibold hover:text-indigo-600"
-                      >
-                      WPBakery
-                        <p class="text-gray-500 font-normal">
-                          Incluye todo tipo de elementos para maquetar
-                        </p>
-                      </a>
-                    </li>
                   </ul>
                 </div>
               </div>
-            </div>
-          </div>
-        </div>
-      </li>
-      <li class="relative group px-3 py-2">
-        <button class="hover:opacity-50 cursor-auto"
-          >Soluciones <i class="fa-solid fa-angle-down"></i></button
-        >
-        <div
-          class="absolute top-2 -left-2 transition group-hover:translate-y-5 translate-y-0 opacity-0 invisible group-hover:opacity-100 group-hover:visible duration-500 ease-in-out group-hover:transform z-50 min-w-[260px] transform"
-        >
-          <div class="relative top-6 p-6 bg-white rounded-xl shadow-xl w-full">
-            <div
-              class="w-10 h-10 bg-white transform rotate-45 absolute top-0 z-0 -translate-x-4 transition-transform group-hover:translate-x-3 duration-500 ease-in-out rounded-sm"
-            >
-            </div>
-            <div class="relative z-10">
-              <p
-                class="uppercase tracking-wider text-gray-500 font-medium text-[13px]"
-              >
-                Realizamos
-              </p>
-              <ul class="mt-3 text-[15px]">
-                <li>
-                  <a
-                    href="https://walink.co/4f797c"
-                    class="bg-transparent bg-clip-text text-transparent bg-gradient-to-br from-indigo-400 to-pink-700 via-blue-500 font-semibold hover:from-blue-600 hover:to-indigo-600 hover:via-pink-400 py-1 block"
-                  >
-                    APP Radio
-                  </a>
-                </li>
-                <li>
-                  <a
-                    href="https://walink.co/4f797c"
-                    class="bg-transparent bg-clip-text text-transparent bg-gradient-to-br from-indigo-400 to-pink-700 via-blue-500 font-semibold hover:from-blue-600 hover:to-indigo-600 hover:via-pink-400 py-1 block"
-                  >
-                    APP Tv
-                  </a>
-                </li>
-                <li>
-                  <a
-                    href="https://walink.co/4f797c"
-                    class="bg-transparent bg-clip-text text-transparent bg-gradient-to-br from-indigo-400 to-pink-700 via-blue-500 font-semibold hover:from-blue-600 hover:to-indigo-600 hover:via-pink-400 py-1 block"
-                  >
-                  Audio Record Mixer
-                  </a>
-                </li>
-              </ul>
             </div>
           </div>
         </div>
@@ -183,14 +92,6 @@
                   <ul class="mt-3 text-[15px]">
                     <li>
                       <a
-                        href="/centovacast/"
-                        class="text-gray-600 hover:text-gray-800 py-1 block font-semibold"
-                      >
-                      CentovaCast
-                      </a>
-                    </li>
-                    <li>
-                      <a
                         href="/sonicpanel/"
                         class="text-gray-600 hover:text-gray-800 py-1 block font-semibold"
                       >
@@ -203,14 +104,6 @@
                         class="text-gray-600 hover:text-gray-800 py-1 block font-semibold"
                       >
                       Server Azuracast
-                      </a>
-                    </li>
-                    <li>
-                      <a
-                        href="/reseller-radio/"
-                        class="text-gray-600 hover:text-gray-800 py-1 block font-semibold"
-                      >
-                      Reseller
                       </a>
                     </li>
                   </ul>
@@ -254,19 +147,19 @@
         <a href="/paginas-web/" class="hover:opacity-50 cursor-pointer">Páginas Web</a>
       </li>
       <li class="relative group px-3 py-2">
-        <a href="/dominios/" class="hover:opacity-50 cursor-pointer">Dominios</a>
+        <a href="https://panel.servistream.net/order/shop?catid=1280d163-9e23-7d43-e78b-64610589e572" class="hover:opacity-50 cursor-pointer">Dominios</a>
       </li>
       <li class="relative group px-3 py-2">
         <a href="/contacto/" class="hover:opacity-50 cursor-pointer">Contacto</a>
       </li>
     </ul>
   </nav>
-  <nav class="hidden lg:block">
+  <nav class="hidden lg:block textos">
     <ul>
       <li>
         <a
-          href="https://clientes.servistream.net/index.php?rp=/login"
-          class="rounded-lg px-3 py-2 font-semibold bg-white bg-opacity-10 flex items-center group"
+          href="https://panel.servistream.net/login"
+          class="rounded-lg px-3 py-2 font-semibold bg-black bg-opacity-10 flex items-center group"
         >
           <span class="mr-2">INICIAR SESIÓN</span>
           <svg
@@ -291,3 +184,13 @@
     </ul>
   </nav>
 </section>
+
+<style>
+       .textos{
+    font-family: "IBM Plex Mono", monospace;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 12px;
+    letter-spacing: 2px;
+ }
+</style>
