--- a/src/components/MobilMenu.astro
+++ b/src/components/MobilMenu.astro
@@ -39,9 +39,6 @@
                             <li class="dropdown__li">
                                 <a href="/hosting-cloud" class="dropdown__anchor font-semibold">Hosting Cloud</a>
                             </li>
-                            <li class="dropdown__li">
-                                <a href="/hosting-reseller" class="dropdown__anchor font-semibold">Reseller</a>
-                            </li>
 
                         </ul>
 
@@ -74,7 +71,7 @@
                 </li>
 
                 <li class="dropdown__list">
-                    <a href="https://clientes.servistream.net/index.php?rp=/login" class="dropdown__link">
+                    <a href="https://panel.servistream.net/" class="dropdown__link">
                         <span class="dropdown__span font-semibold">Iniciar Sesión</span>
                     </a>
                 </li>
