--- a/src/pages/dominios.astro
+++ b/src/pages/dominios.astro
@@ -105,7 +105,7 @@ import BotonTres from "../components/BotonTres.astro";
                 </div>
                 <p class="my-5">Todos los planes incluyen migraciones, SSL gratis, copias de seguridad y 99,99% de tiempo de actividad garantizado</p>
                 <div>
-					<BotonTres href="https://clientes.servistream.net/index.php?rp=/store/web-hosting-cloud/starter-plan" title="Comprar Ahora" />
+					<BotonTres href="https://panel.servistream.net/order/product?pid=93e8d569-d072-4518-696c-d4e853121607" title="Comprar Ahora" />
 				</div>
 
             </div>
