--- a/src/pages/hosting-linux.astro
+++ b/src/pages/hosting-linux.astro
@@ -120,7 +120,7 @@ import Acordion from "../components/hosting_linux/Acordion.astro";
                 des7="5 dominios aparcados"
                 des8="20 correos electrónicos"
                 des9="5 MySQL Base de datos"
-                link="https://clientes.servistream.net/index.php?rp=/store/web-hosting-linux/deluxe-plan"
+                link="https://panel.servistream.net/order/product?pid=6d530876-8251-d481-3eef-847e390921e6"
             />
             <PlanesHostingLinux
                 plan="Plan Ultimate"
@@ -136,7 +136,7 @@ import Acordion from "../components/hosting_linux/Acordion.astro";
                 des7="10 dominios aparcados"
                 des8="30 correos electrónicos"
                 des9="20 MySQL Base de datos"
-                link="https://clientes.servistream.net/index.php?rp=/store/web-hosting-linux/ultimate-plan"
+                link="https://panel.servistream.net/order/product?pid=80d1639e-237d-4350-932b-64610589e572"
             />
             <PlanesHostingLinux
                 plan="Plan Maximum"
@@ -152,7 +152,7 @@ import Acordion from "../components/hosting_linux/Acordion.astro";
                 des7="30 dominios aparcados"
                 des8="50 correos electrónicos"
                 des9="50 MySQL Base de datos"
-                link="https://clientes.servistream.net/index.php?rp=/store/web-hosting-linux/maximum-plan"
+                link="https://panel.servistream.net/order/product?pid=0381d780-e72d-4d69-d71a-7413569926e5"
             />
         </div>
     </section>
@@ -224,7 +224,7 @@ import Acordion from "../components/hosting_linux/Acordion.astro";
                 migración automatizada.
             </h5>
             <div class="mt-5">
-                <BotonTres href="https://clientes.servistream.net/index.php?rp=/store/web-hosting-linux/maximum-plan" title="Comprar Plan"/>
+                <BotonTres href="https://panel.servistream.net/order/product?pid=0381d780-e72d-4d69-d71a-7413569926e5" title="Comprar Plan"/>
             </div>
 
         </div>
