--- a/src/pages/tv-streaming.astro
+++ b/src/pages/tv-streaming.astro
@@ -50,9 +50,9 @@ import PlayerTv from "../components/tv_streaming/PlayerTv.astro";
                         </p>
                     </div>
     
-                    <div class="flex flex-col  items-center mt-10 md:flex-row">
+                    <div class="flex flex-col  items-center mt-10 md:flex-row textos">
                         <a
-                            href="https://clientes.servistream.net/index.php?rp=/store/streaming-radio/stream-basico"
+                            href="https://panel.servistream.net/order/product?pid=052d137e-08d2-419d-06df-3495163789e6"
                             class="relative inline-flex items-center justify-center p-0.5 overflow-hidden text-sm font-medium text-gray-900 rounded-lg group bg-gradient-to-br from-purple-600 to-blue-500 group-hover:from-purple-600 group-hover:to-blue-500 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 mb-5 md:mb-0"
                         >
                             <span
@@ -113,11 +113,11 @@ import PlayerTv from "../components/tv_streaming/PlayerTv.astro";
             <p class="text-white mt-2">Seleccione un plan adecuado para su alojamiento y transmisión de video profesional</p>
             </div>  
 
-         <CardPrecioTvStreaming plan="Live Streaming Small" descrip="Transmisión solo en vivo" precio="20" configuracion="Activación en unas horas" des1="99" des2="Transferencia" des4="Sin Panel" link="https://clientes.servistream.net/index.php?rp=/store/streaming-tv/live-streaming-small"/>
-         <CardPrecioTvStreaming plan="Live Streaming Profesional" descrip="Transmisión solo en vivo" precio="30" configuracion="Activación en unas horas" des1="499" des2="Transferencia" des4="Sin Panel" link="https://clientes.servistream.net/index.php?rp=/store/streaming-tv/live-streaming-profesional"/>
-         <CardPrecioTvStreaming plan="Cloud Streaming Basic" descrip="Transmisión en vivo y con AutoDj" precio="30" configuracion="Activación en unas horas" des1="99" des2="Transferencia" des3="160 GB disco SSL" des4="Panel VDO" link="https://clientes.servistream.net/index.php?rp=/store/streaming-tv/live-cloud-streaming-basic"/>
-         <CardPrecioTvStreaming plan="Cloud Streaming Medium" descrip="Transmisión en vivo y con AutoDj" precio="40" configuracion="Activación en unas horas" des1="299" des2="Transferencia" des3="240 GB disco SSL" des4="Panel VDO" link="https://clientes.servistream.net/index.php?rp=/store/streaming-tv/live-cloud-streaming-medium"/>
-         <CardPrecioTvStreaming plan="Cloud Streaming Large" descrip="Transmisión en vivo y con AutoDj" precio="75" configuracion="Activación en unas horas" des1="499" des2="Transferencia" des3="320 GB disco SSL" des4="Panel VDO" link="https://clientes.servistream.net/index.php?rp=/store/streaming-tv/live-cloud-streaming-large"/>
+         <CardPrecioTvStreaming plan="Live Streaming Small" descrip="Transmisión solo en vivo" precio="20" configuracion="Activación en unas horas" des1="99" des2="Transferencia" des4="Sin Panel" link="https://panel.servistream.net/order/product?pid=052d137e-08d2-419d-06df-3495163789e6"/>
+         <CardPrecioTvStreaming plan="Live Streaming Profesional" descrip="Transmisión solo en vivo" precio="30" configuracion="Activación en unas horas" des1="499" des2="Transferencia" des4="Sin Panel" link="https://panel.servistream.net/order/product?pid=61e50989-73d2-472e-570f-345e610832d7"/>
+         <CardPrecioTvStreaming plan="Cloud Streaming Basic" descrip="Transmisión en vivo y con AutoDj" precio="30" configuracion="Activación en unas horas" des1="99" des2="Transferencia" des3="160 GB disco SSL" des4="Panel VDO" link="https://panel.servistream.net/order/product?pid=1e96d298-537d-4e58-733c-54e120637085"/>
+         <CardPrecioTvStreaming plan="Cloud Streaming Medium" descrip="Transmisión en vivo y con AutoDj" precio="40" configuracion="Activación en unas horas" des1="299" des2="Transferencia" des3="240 GB disco SSL" des4="Panel VDO" link="https://panel.servistream.net/order/product?pid=80d1639e-237d-4350-522a-64610589e572"/>
+         <CardPrecioTvStreaming plan="Cloud Streaming Large" descrip="Transmisión en vivo y con AutoDj" precio="75" configuracion="Activación en unas horas" des1="499" des2="Transferencia" des3="320 GB disco SSL" des4="Panel VDO" link="https://panel.servistream.net/order/product?pid=0381d780-e72d-4d69-631c-7413569926e5"/>
 
         </section>
 
@@ -178,6 +178,14 @@ import PlayerTv from "../components/tv_streaming/PlayerTv.astro";
     iframe{
         border-radius: 1rem;
     }
+
+     .textos{
+    font-family: "IBM Plex Mono", monospace;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 12px;
+    letter-spacing: 2px;
+ }
 
     /*
     CSS SECCION PLANES HOSTING
