--- a/src/components/BotonTres.astro
+++ b/src/components/BotonTres.astro
@@ -7,9 +7,19 @@ interface Props {
 const { href, title } = Astro.props;
 ---
 
-<a href={href} class="bg-[#000] hover:bg-[#000000ca] group  py-2 px-8 inline-block rounded-lg transition ease-in-out border border-transparent mb-4 lg:mb-0 md:mr-2" >
+<a href={href} class="bg-[#000] textos hover:bg-[#000000ca] group  py-2 px-8 inline-block rounded-lg transition ease-in-out border border-transparent mb-4 lg:mb-0 md:mr-2" >
     <div class="flex items-center">
         <p class="text-white font-semibold">{title}</p>
         <img class="h-4 w-4 ml-3 opacity-50 group-hover:opacity-100 transition ease-in-out group-hover:transform group-hover:translate-x-1" src="/img/SolarArrowRightBoldDuotone.svg" alt="Icono">
     </div>
 </a>
+
+<style>
+ .textos{
+    font-family: "IBM Plex Mono", monospace;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 12px;
+    letter-spacing: 2px;
+ }
+</style>
