--- a/src/components/hosting_cloud/SubmenuHostingCloud.astro
+++ b/src/components/hosting_cloud/SubmenuHostingCloud.astro
@@ -30,14 +30,14 @@
             </a>
         </li>
         <li class="hover__color">
-            <a class="group" href="/hosting-reseller/">
+            <a class="group" href="/paginas-web/">
                 <p
                     class="color__principal font-semibold barra__color rounded-md px-1 inline-block"
                 >
-                    DESDE $20 USD
+                    DESCUENTOS
                 </p>
                 <h2 class="text-2xl font-semibold pt-2 pb-2">
-                    Hosting Reseller
+                    Páginas Web
                 </h2>
                 <p class="text-xs">
                     Todos nuestros planes <i
