--- a/src/components/tv_streaming/CardPrecioTvStreaming.astro
+++ b/src/components/tv_streaming/CardPrecioTvStreaming.astro
@@ -47,11 +47,11 @@ const { descrip, link, precio, plan, configuracion, des1, des2, des3, des4} = As
     class="mt-10 relative inline-flex items-center justify-center p-0.5 overflow-hidden text-sm font-medium text-gray-900 rounded-lg group bg-gradient-to-br from-purple-600 to-blue-500 group-hover:from-purple-600 group-hover:to-blue-500 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800"
 >
     <span
-        class="relative px-5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0"
+        class="relative textos px-5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0"
     >
         Realizar Pedido
     </span>
-</a>
+</a>x
 
 </section>
 
@@ -67,4 +67,12 @@ const { descrip, link, precio, plan, configuracion, des1, des2, des3, des4} = As
         -webkit-background-clip: text;
         background-clip: text;
     }
+
+         .textos{
+    font-family: "IBM Plex Mono", monospace;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 12px;
+    letter-spacing: 2px;
+ }
 </style>
