--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,6 +23,24 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.png" />
 		<meta name="generator" content={Astro.generator} />
+
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Hurricane&family=Rethink+Sans:ital,wght@0,400..800;1,400..800&display=swap"
+			rel="stylesheet"
+		/>
+
+		<link
+			href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+			rel="stylesheet"
+		/>
+
+		<link
+			href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap"
+			rel="stylesheet"
+		/>
+
 		<title>{title}</title>
 	</head>
 	<body>
@@ -45,10 +63,15 @@ const { title } = Astro.props;
 			--gradient-text: #7186ff;
 			--gradient-color-1: #7286ff;
 			--gradient-color-2: #fe7587;
-			--dropdown-border: rgba(255, 255, 255, .1);
+			--dropdown-border: rgba(255, 255, 255, 0.1);
 		}
 		body {
-			font-family: "Girol";
+			font-family: "Manrope", sans-serif;
+			font-optical-sizing: auto;
+			font-weight: 400;
+			font-style: normal;
+			letter-spacing: -0.2px;
+			/* font-family: "Girol";  */
 			background: rgb(249 250 251);
 		}
 
@@ -82,22 +105,30 @@ const { title } = Astro.props;
 			font-weight: 400;
 		}
 
-		h1{
+		h1 {
+			font-family: "Rethink Sans", sans-serif;
+			font-weight: 700;
+			color: #181526;
+			letter-spacing: -0.5px;
 			text-wrap: balance;
 		}
 
 		h2 {
-			color: #181a1c;
+			font-family: "Rethink Sans", sans-serif;
 			font-weight: 700;
-			font-size: 3rem/* 60px */;
-    		line-height: 1;
+			letter-spacing: -0.5px;
+			color: #181526;
+			font-weight: 700;
+			font-size: 3rem /* 60px */;
+			line-height: 1;
 			text-wrap: balance;
 		}
 
-		h5{
-			color: rgb(31 41 55);
-			font-weight: 600;
-			font-size: 1.25rem; /* 20px */
+		h5 {
+			font-family: "Manrope", sans-serif;
+			font-weight: 400;
+			letter-spacing: -0.2px;
+			color: #74737c;
 			line-height: 1.75rem; /* 28px */
 			padding-top: 1rem;
 			text-wrap: balance;
