--- a/src/pages/sonicpanel.astro
+++ b/src/pages/sonicpanel.astro
@@ -96,7 +96,7 @@ import PromocionRadio from "../components/PromocionRadio.astro";    /* CODIGO DE
 
 
         <div class="player-radio">
-            <iframe src="https://playerhd.eu/radio/electrofactoryradio/" frameborder="0" allowtransparency="true" style="width: 100%; min-height: 540px; border: 0;"></iframe>
+            <iframe src="https://player.streamseguro.com/radio/electrofactoryradio/" frameborder="0" allowtransparency="true" style="width: 100%; min-height: 540px; border: 0;"></iframe>
         </div>
 
 
