--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,7 +34,7 @@ import BotonCuatro from "../components/BotonCuatro.astro";
 
 			<section class="container mx-auto">
 				<section
-					class="px-5 grid grid-cols-1 grid-rows-1 gap-2 place-content-center lg:grid-cols-2"
+					class="px-5 grid grid-cols-1 grid-rows-1 gap-2 place-content-center lg:grid-cols-1 text-center"
 				>
 					<div>
 						<h2 class="text-white pb-3 text-lg underline">
@@ -43,15 +43,15 @@ import BotonCuatro from "../components/BotonCuatro.astro";
 						<h1
 							class=" text-4xl md:text-5xl lg:text-7xl my-4"
 						>
-							Hosting, Tv y Radio Streaming
+							Hosting, Tv y <br> Radio Streaming
 						</h1>
 						<p class="font-normal text-xl pt-2 lg:text-2xl">
 							Nos aseguramos de que tu sitio web sea rápido,
-							seguro y esté siempre activo, para que tus
+							seguro y esté siempre activo, <br> para que tus
 							visitantes y motores de búsqueda confíen en ti.
 							Garantizado.
 						</p>
-						<div class="mt-10 flex flex-col md:flex-row">
+						<div class="mt-10 flex flex-col md:flex-row justify-center">
 							<div>
 								<BotonUno
 									href="/hosting-cloud/"
@@ -74,7 +74,7 @@ import BotonCuatro from "../components/BotonCuatro.astro";
 						/> -->
 					</div>
 				</section>
-				<div class="px-5 mt-10">
+				<div class="px-5 mt-10 text-center">
 					<p class="text-4xl font-bold">
 						Alojando a <span class="underline">1.245 sitios</span>,
 						clientes satisfechos +500
